[package]
name = "kiew"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
indicatif = "0.17.11"
owo-colors = "4.1.0"
prettytable = "0.10.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["full"] }
