[package]
name = "kiew"
version = "1.0.0"
edition = "2021"
description = "Scraping website tool"
license = "MIT"
readme = "reame.md"
repository = "https://github.com/reim-developer/kiew"
keywords = ["cli", "rust", "tool"]
categories = ["command-line-interface"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
indicatif = "0.17.11"
io-uring = "0.7.4"
libc = "0.2.169"
owo-colors = "4.1.0"
prettytable = "0.10.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
