[package]
name = "kiew"
version = "1.0.0"
edition = "2021"
description = "Scraping website tool"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/reim-developer/kiew"
keywords = ["cli", "rust", "tool"]
categories = ["command-line-interface"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
indicatif = "0.17.11"
lazy_static = "1.5.0"
mime = "0.3.17"
owo-colors = "4.1.0"
prettytable = "0.10.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
syntect = "5.2.0"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
url = "2.5.4"

